Added a few views

--- a/BudgetPlannerBlazor/Pages/Index.razor
+++ b/BudgetPlannerBlazor/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
+<h3>Welcome !</h3>
+<div class="alert-warning" style="width:auto">Please log in or create new account to have access to all funcionalities</div>
+<br/>
+<button type="button" onclick="window.location.href='login' "class="btn btn-primary">Go to log in site</button>
+<button type="button" onclick="window.location.href='createaccount'" class="btn btn-secondary">Create new account</button>
 
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
