--- a/BudgetPlannerBlazor/Shared/NavMenu.razor
+++ b/BudgetPlannerBlazor/Shared/NavMenu.razor
@@ -10,18 +10,18 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="summary" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="summary">
-                <span class="oi oi-dollar" aria-hidden="true"></span> Summary
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="addexpense">
                 <span class="oi oi-plus" aria-hidden="true"></span> Add an expense
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="about">
+                <span class="oi oi-question-mark" aria-hidden="true"></span> About
             </NavLink>
         </div>
     </nav>
