implemented clean architecture, fix gitignore

--- a/BudgetPlannerBlazor/Pages/About.razor
+++ b/BudgetPlannerBlazor/Pages/About.razor
@@ -4,9 +4,11 @@
 <div class="card">
     <div class="card-body" style="width:auto">
         Main goal of budget planner are:
-        <br/> - to help me with learning how to create fully functional web 
-        application using Blazor WebAssembly technology
-        <br/> - improve my ability to manage my budget :)    
+        <ul>
+            <li> to help me with learning how to create fully functional web 
+        application using Blazor WebAssembly technology</li>
+            <li> improve my ability to manage my budget :)  </li>
+        </ul>   
     </div>
 </div>
 @code {
